--- a/src/components/image/image.module.scss
+++ b/src/components/image/image.module.scss
@@ -10,7 +10,7 @@
     height: fit-content;
     padding-bottom: 3%;
     background-size: 100%;
-    background: url(../../assets/images/hero-bg.svg);
+    background: url(../../assets/images/hero-bg.png);
     background-size: 100%;
 
     &__main-text {
