--- a/src/components/UI/emoji-card/emoji-card.module.scss
+++ b/src/components/UI/emoji-card/emoji-card.module.scss
@@ -3,14 +3,13 @@
 
 .emoji-card {
     @include centerredContentVH($cross: center, $main: flex-start, $direction: row, $gap: 2%);
-
     position: absolute;
     top: -8%;
     left: -7%;
     z-index: 2;
     padding: 2% 6%;
     background-color: $clr-plain;
-    box-shadow: 2px 3px 0px 0px $clr-dk;
+    box-shadow: 2px 3px 0 0 $clr-dk;
     transform: rotate(14.32deg);
    
     &_designed {
@@ -19,7 +18,7 @@
         bottom: 7%;
         right: -20%;
         background-color: $clr-secondary;
-        box-shadow: 2px 3px 0px 0px $clr-primary;
+        box-shadow: 2px 3px 0 0 $clr-primary;
         transform: rotate(-15.39deg);
     }
 
