--- a/src/components/image/image.module.scss
+++ b/src/components/image/image.module.scss
@@ -32,9 +32,8 @@
         background-color: $clr-secondary;
         border: 2px solid $clr-secondary;
         border-radius: 23px;
-        box-shadow: 0px 4px 74px 0px rgb(65, 0, 203);
+        box-shadow: 0 4px 74px 0 rgb(65, 0, 203);
         transform: rotate(2.2deg);
-        // padding: 7px 43px;
         font-size: $fs-med-extra;
         font-weight: $fw-thkst;
         line-height: 100.9%;
@@ -42,7 +41,6 @@
 
         &::after {
             @include centerredContentVH($cross: center, $main: center, $direction: row, $gap: 0px);
-
             position: absolute;
             top: -6px;
             left: -2px;
