--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -5,7 +5,6 @@
     @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 0px);
     max-width: 920px;
     width: 100%;
-    //height: 640px; //temp
     position: relative;
     padding: 2% 6% 0;
 
@@ -25,7 +24,6 @@
         position: absolute;
         left: 4.5%;
         bottom: -7%;
-
     }
 
     &__arrow {
@@ -42,7 +40,10 @@
         background: url(../../assets/images/curved-arrow.svg) center no-repeat;
         background-size: contain;
     }
-   
+}
+
+.intro__content-wrap {
+    width: 100%;
 }
 
 .cards {
@@ -51,8 +52,6 @@
 
     @include centerredContentVH($cross: center, $main: center, $direction: row, $gap: 6vw);
     position: relative;
-
-
 
     &__plain-card {
         @include cardSizeCQW( $plain-card-w, 0.5793);
