--- a/src/components/page-layout/page-layout.module.scss
+++ b/src/components/page-layout/page-layout.module.scss
@@ -16,8 +16,6 @@
 }
 
 .page-layout {
-    // @include centeredContentVH($cross: flex-start, $main: center, $direction: row, $gap: 0px);
-    //gap: 15px;
     width: 100%;
     height: 100%;
     margin: 29px 0 0 0;
@@ -50,7 +48,6 @@
 }
 
 .page-layout__aside {
-
     z-index: 10;
 
     &.nav-wrap {
@@ -76,10 +73,9 @@
             left: calc(50% - (920px / 1.5) - 2vw);
 
             @media screen and (max-width: $sw-max) {
-                position: fixed; //test
+                position: fixed;
                 bottom: auto;
                 top: 0;
-                bottom: auto;
                 left: 0;
                 right: 0;
                 background: $clr-base-dk-transp;
@@ -132,9 +128,6 @@
     background-position-y: -45%;
 
     &__image-wrap {
-        // width: fit-content;
-        // margin: 0 auto;
-
         display: flex;
         justify-content: center;
         width: 100%;
@@ -144,7 +137,6 @@
 
     &__intro-wrap {
         width: 100%;
-
     }
 }
 
