--- a/src/components/order-form/order-form.module.scss
+++ b/src/components/order-form/order-form.module.scss
@@ -43,6 +43,10 @@
   font-size: max(14px, 1rem);
 }
 
+.options-list__option {
+  @extend .options-list__label;
+}
+
 .form__item-picker {
   grid-area: picker;
   margin-bottom: 5%;
